Home and Team pages done

--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -18,3 +18,16 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.img-circle {
+  box-shadow: 0 0 10px #eaeaea;
+  width: 120px;
+  height: 120px;
+  margin: 30px;
+  opacity: 0.9
+}
+
+#contact-vertical {
+  padding-top: 140px;
+  padding-bottom: 140px
+}
