--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,8 +26,12 @@
 
   <body class="<%= page_classes %>">
 
+
+
+
     <%= partial "navbar" %>
     <%= yield %>
+    <%= partial "footer" %>
 
   </body>
 </html>
