Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -6,16 +6,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.banner h1 {
-  font-size: 50px;
+
+  h1 {
+  font-size: 90px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-.banner p {
+  padding-bottom: 10px
+  }
+  p {
   font-size: 25px;
   font-weight: lighter;
-  color: rgba(255, 255, 255, 0.8);
+  color: $gray-lighter;
   margin-bottom: 50px;
+  }
+  h2 {
+  padding-bottom: 16px;
+  }
 }
-
