--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
     <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/trevi.jpg');">
       <div class="banner-content">
-        <h1>WELCOME HOME</h1>
+        <h1>welcome to rome</h1>
         <p>Rent unique places to stay from local hosts in 190+ countries.</p>
         <form action="#" class="form-inline">
           <input type="text" class="form-control input-lg" placeholder="checkin">
@@ -89,7 +89,3 @@
         <input type="submit" value="Subscribe" class="btn btn-primary">
       </form>
     </div>
-
-
-
-
