--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -20,7 +20,7 @@
 }
 
 .img-circle {
-  box-shadow: 0 0 10px #eaeaea;
+  box-shadow: $lazy-shadow;
   width: 120px;
   height: 120px;
   margin: 30px;
