--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <% link_to "/", class: "navbar-wagon-brand" do %>
-    <%= image_tag "lewagon.png" %>
+    <%= image_tag "adi.png" %>
   <% end %>
 
   <!-- Right Navigation -->
