--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,21 +1,23 @@
 .avatar {
   width: 30px;
   border-radius: 50%;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
 }
 .avatar-large {
   width: 50px;
   border-radius: 50%;
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
 }
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 .avatar-square {
   width: 30px;
   border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 0 4px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
 
