--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -27,7 +27,7 @@ $base-height: 1.4;
 $brand-color: #D23333;
 
 $red: #b5371b;
-$blue: #37d3cb;
+$blue: #236eaf;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
